2008-08-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: fix bugs when trying to use already freed
	    OCI8::Metadata::*.
	* ext/oci8/ocidatetime.c: fix OCI8::BindType::OCIDate#set().
	* ext/oci8/ocinumber.c: undef OraNumber#round_prec and OraNumber
	    #shift when using Oracle 8.0.
	* lib/oci8/datetime.rb, lib/oci8/metadata.rb: fix bugs when using
	    Oracle 8.0.
	* test/config.rb, test/test_dbi.rb, test/test_metadata.rb,
	  test/test_oci8.rb, test/test_oranumber.rb: do same with the
	    previous commit.
	* test/test_datetime.rb: disable some test cases when Oracle 8.1
	    or lower.
	* test/test_dbi_clob.rb: fix when testing in a deep directory.

2008-08-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.h.tmpl, ext/oci8/apiwrap.rb
	  ext/oci8/apiwrap.yml, ext/oci8/bind.c, ext/oci8/extconf.rb,
	  ext/oci8/oci8.h, ext/oci8/ocidatetime.c, ext/oci8/xmldb.c,
	  lib/oci8.rb.in, lib/oci8/datetime.rb, lib/oci8/metadata.rb,
	  lib/oci8/oci8.rb: change oracle version number format.
	    For example Oracle 9.1.0's version number was represented as 910
	    in ruby-oci8. Now it is 0x09000000. This format is same with
	    that of the last argument of OCIServerRelease().

2008-08-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: add workaround code for a losing character problem
	    when reading CLOB. The problem is happened at the following condition.
	    1. Oracle client version is 10.2.0.4 or 11.1.0.6.
	       (It doesn't depend on Oracle server version.)
	    2. The character set is a variable-length one (e.g. AL32UTF8).
	* dist-files: add lib/oci8/datetime.rb and .document files.

2008-08-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: fix OCI8::LOB#size= when using a lob over 2GB.
	    fix the return value of OCI8::LOB#write when writing a string
	    over 2GB.

2008-08-05  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_all.rb, test/test_array_dml.rb,